# PROJECTS

./: README.md
Door_Lock_System_Using_STM32/: .cproject  .mxproject  .project  Door_Lock_System_Using_STM32.ioc
Door_Lock_System_Using_STM32/Core/Inc/: keypad.h  liquidcrystal_i2c.h  rc522.h
Door_Lock_System_Using_STM32/Core/Src/: keypad.c  liquidcrystal_i2c.c  main.c  rc522.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Door_Lock_System_Using_STM32/Debug/: CDAC_PROECT_STHAL.elf  CDAC_PROECT_STHAL.list  CDAC_PROECT_STHAL.map  CDAC_PROECT_STHAL2_KEYBOARD.elf  CDAC_PROECT_STHAL2_KEYBOARD.list  CDAC_PROECT_STHAL2_KEYBOARD.map  Door_Lock_System_Using_STM32.list  Door_Lock_System_Using_STM32.map  makefile  objects.list
Door_Lock_System_Using_STM32/Debug/Core/Src/: keypad.cyclo  keypad.d  keypad.su  main.cyclo  main.d  main.su  rc522.cyclo  rc522.d  rc522.su  stm32f4xx_hal_msp.cyclo  stm32f4xx_hal_msp.su  subdir.mk
NetworkTraficCapture/: CMakeLists.txt  README.md  build_project.sh
NetworkTraficCapture/bindings/: CMakeCache.txt  Makefile  cmake_install.cmake  pybind_module.cpp
NetworkTraficCapture/flask_app/: app.py
NetworkTraficCapture/flask_app/static/: dashboard.css  dashboard.js
NetworkTraficCapture/flask_app/templates/: dashboard.html
NetworkTraficCapture/python/: analyze_packets.py  plot_packets.py  test_capture.py
NetworkTraficCapture/src/: packet_capture.cpp  packet_capture.h
NetworkTraficCapture/test/: live_plot.py
